@@ -247,6 +247,9 @@ Changes on 1.2.0 since 1.1.0:
     Those limitations are due to lightweight nature of the file manager
     and otherwise counting will take too much resources.
 
+* Added API to create third-party plugins that may append own text to the
+    statusbar text for selected files.
+
 
 Changes on 1.1.0 since 1.0.1:
 
